Fix mega menu UX on mobile.

--- a/assets/scss/Mask/navPages.scss
+++ b/assets/scss/Mask/navPages.scss
@@ -313,10 +313,13 @@
         transition: .2s;
     }
 
-    &:hover {
+    @media (any-hover: hover) {
 
-        &:before {
-            width: 100%;
+        &:hover {
+    
+            &:before {
+                width: 100%;
+            }
         }
     }
 }
